added analytics tracking

--- a/templates/article.hbs
+++ b/templates/article.hbs
@@ -6,4 +6,12 @@
     {{{contents}}}
   </div>
 </article>
+<script>
+  analytics.page('Article', {
+    article: {
+      name: "{{title}}",
+      date: "{{timestamp date}}"
+    }
+  });
+</script>
 {{> foot}}
