--- a/templates/article.hbs
+++ b/templates/article.hbs
@@ -1,7 +1,7 @@
 {{> head}}
 <article class="Article">
   <h1 class="Article-title Heading Heading--huge">{{title}}</h1>
-  <time class="Article-date Heading Heading--section" datetime="{{timestamp date}}">{{date date "MMMM YYYY"}}</time>
+  <time class="Article-date" datetime="{{timestamp date}}">{{date date "MMMM YYYY"}}</time>
   <div class="Article-content Prose Prose--large">
     {{{contents}}}
   </div>
