--- a/client/lib/profile/index.css
+++ b/client/lib/profile/index.css
@@ -4,24 +4,30 @@
  */
 
 .Profile {
-  position: relative;
-}
-
-.Profile-name {
   position: absolute;
-  bottom: 100%;
+  top: 50%;
+  margin-top: calc(-1 * var(--size-huge) / 2);
+  width: 100%;
+  text-align: center;
 }
 
 .Profile-avatar {
-  position: absolute;
-  bottom: 100%;
-  margin-bottom: 35px;
+  display: inline-block;
   width: var(--size-huge);
   height: var(--size-huge);
-  border-radius: var(--size-radius);
+  border-radius: var(--size-huge);
+  background: url('/avatar.png');
+  background-size: contain;
+  box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
+}
+
+.Profile-role {
+  color: var(--text-secondary);
+  margin-bottom: var(--size-small);
 }
 
 .Profile-bio {
+  display: none;
   margin-bottom: var(--size-small);
 }
 
@@ -52,7 +58,7 @@
   background-position: center center;
   background-repeat: none;
   background-size: contain;
-  opacity: .75;
+  opacity: .7;
   transition: opacity .2s;
 }
 
