--- a/templates/article.hbs
+++ b/templates/article.hbs
@@ -2,7 +2,7 @@
 <article class="Article">
   <h1 class="Article-title Heading Heading--huge">{{title}}</h1>
   <time class="Article-date" datetime="{{timestamp date}}">{{date date "dddd, D MMMM YYYY"}}</time>
-  <div class="Article-content Prose Prose--large">
+  <div class="Article-content Prose Prose--medium">
     {{{contents}}}
   </div>
 </article>
