--- a/templates/profile.hbs
+++ b/templates/profile.hbs
@@ -1,13 +1,7 @@
 <div class="Profile">
   <a class="Profile-avatar" href="/"></a>
   <h1 class="Profile-name Heading Heading--medium"><a href="/">{{name}}</a></h4>
-  <h2 class="Profile-role Heading Heading--small">{{role}} at <a class="Link" href="https://segment.com">Segment</a></h2>
-
-{{!--   {{#if bio}}
-  <div class="Profile-bio Prose Prose--small">
-    {{{markdown bio}}}
-  </div>
-  {{/if}} --}}
+  <p class="Profile-role">{{role}} at <a class="Link" href="https://segment.com">Segment</a></p>
 
   <ul class="Profile-links">
     {{#if twitter}}<a class="Profile-link Profile-twitter-link" href="https://twitter.com/{{twitter}}">Twitter</a>{{/if}}
