--- a/client/lib/article/index.css
+++ b/client/lib/article/index.css
@@ -13,7 +13,7 @@
 
 .Article-date {
   display: block;
-  margin-bottom: var(--size-large);
-  color: var(--text-secondary);
   font-size: var(--text-medium);
+  color: var(--text-secondary);
+  margin-bottom: var(--leading-medium);
 }
