--- a/templates/article.hbs
+++ b/templates/article.hbs
@@ -1,5 +1,6 @@
 {{> head}}
 <article class="Article">
+  <a class="Article-home" href="/">Home</a>
   <h1 class="Article-title Heading Heading--huge">{{title}}</h1>
   <time class="Article-date" datetime="{{timestamp date}}">{{date date "dddd, D MMMM YYYY"}}</time>
   <div class="Article-content Prose Prose--medium">
