--- a/templates/foot.hbs
+++ b/templates/foot.hbs
@@ -1,6 +1,7 @@
-    </div>
-    <div class="Layout-sidebar">
-      {{> profile}}
+      </div>
+      <div class="Layout-sidebar Column Column--third">
+        {{> profile}}
+      </div>
     </div>
     <script src="/index.js"></script>
   </body>
