--- a/templates/head.hbs
+++ b/templates/head.hbs
@@ -19,5 +19,6 @@
     </script>
     {{/if}}
   </head>
-  <body class="Layout">
-    <div class="Layout-main">
+  <body>
+    <div class="Layout Columns">
+      <div class="Layout-main Column Column--two-thirds">
