--- a/support/index.css
+++ b/support/index.css
@@ -51,11 +51,11 @@
  */
 
 /**
- * Columns.
+ * Borders.
  */
 
 /**
- * Borders.
+ * Columns.
  */
 
 /**
@@ -1560,7 +1560,7 @@ html {
   left: 0;
   top: .33em;
   bottom: .33em;
-  border-left: 4px solid rgba(164, 149, 129, 0.8);
+  border-left: 1px solid #A49581;
 }
 
 .Prose blockquote small {
@@ -1646,10 +1646,10 @@ html {
  */
 
 .Prose hr {
-  width: 255px;
+  width: 120px;
   margin: 3em auto;
   border: none;
-  border-bottom: 2px solid #CDC0AC;
+  border-bottom: 1px solid #CDC0AC;
 }
 
 /**
@@ -1736,12 +1736,11 @@ html {
   line-height: 1;
   font-family: 'Freight Sans Small Caps', 'Verdana', 'Geneva', sans-serif;
   display: inline-block;
-  margin-left: .5em;
-  padding-left: 19px;
+  padding-left: 25px;
   height: 16px;
   background-image: url('client/lib/summary/images/link@2x.png');
   background-size: contain;
-  background-position: left center;
+  background-position: 7px center;
   background-repeat: no-repeat;
   text-indent: -9999px;
 }
