--- a/templates/head.hbs
+++ b/templates/head.hbs
@@ -20,5 +20,8 @@
     {{/if}}
   </head>
   <body>
-    <div class="Layout Columns">
-      <div class="Layout-main Column Column--two-thirds">
+    <div class="Layout">
+      <div class="Layout-nav">
+        {{> profile}}
+      </div>
+      <div class="Layout-main">
