--- a/client/lib/summary/index.css
+++ b/client/lib/summary/index.css
@@ -4,16 +4,33 @@
  */
 
 .Summaries-list-item + .Summaries-list-item {
-  margin-top: var(--size-large);
+  margin-top: var(--size-medium);
+}
+
+@media (--medium),
+@media (--large) {
+  .Summaries-list-item + .Summaries-list-item {
+    margin-top: var(--size-large);
+  }
 }
 
 /**
  * Summary.
  */
 
+.Summary {}
+
+/**
+ * Title.
+ */
+
 .Summary-title {
   position: relative;
 }
+
+/**
+ * Date.
+ */
 
 .Summary-date {
   float: left;
@@ -25,6 +42,10 @@
   content: '·';
   margin: 0 .3em;
 }
+
+/**
+ * Link.
+ */
 
 .Summary-external-link::after {
   content: attr(data-domain);
@@ -43,14 +64,21 @@
   text-indent: -9999px;
 }
 
-.Summary-external-link:hover::after {
-  text-indent: 0px;
+@media (--medium),
+@media (--large) {
+  .Summary-external-link:hover::after {
+    text-indent: 0px;
+  }
 }
 
 .Summary-external-link[data-domain="segment.com"]::after {
   color: var(--fern-1);
   background-image: url('images/link-green@2x.png');
 }
+
+/**
+ * Excerpt.
+ */
 
 .Summary-excerpt p a {
   color: inherit;
