--- a/client/ui/lib/prose/index.css
+++ b/client/ui/lib/prose/index.css
@@ -187,7 +187,7 @@
 .Prose--medium small {
   margin-top: calc(var(--leading-small) / 3);
   font-size: var(--text-small);
-  line-height: var(--leading-small);
+  line-height: calc(var(--leading-medium) * 0.85);
 }
 
 /**
