--- a/client/lib/summary/index.css
+++ b/client/lib/summary/index.css
@@ -7,8 +7,7 @@
   margin-top: var(--size-medium);
 }
 
-@media (--medium),
-@media (--large) {
+@media (--medium-and-above) {
   .Summaries-list-item + .Summaries-list-item {
     margin-top: var(--size-large);
   }
